--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.1)
 
 project(passe_temps)
 
-find_package(Boost REQUIRED COMPONENTS chrono system)
+find_package(Boost REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIRS})
 add_executable(passe_temps passe_temps.cpp)
