--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ compiler:
   - gcc
 
 install:
-  - sudo apt-get install libboost-dev
+  - sudo apt-get install libboost-dev libboost-system-dev libboost-chrono-dev
 
 script:
   - mkdir build
   - cd build
   - cmake ..
   - make 
-  - ./passe_temps
+  - ctest -V
